adding text area

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <label for="lname">Last Name:</label>
         <input type="text" id="lname" name="lname"><br>
                 <input class="sub" type="submit" value="submit">
-    </form>
+            </form>
+            <label for="feedback">Give Your Suggestion:</label>
+            <br>
+            <textarea>
+                
+            </textarea>
 </body>
 </html>
